--- a/src/main/resources/templates/basic/items.html
+++ b/src/main/resources/templates/basic/items.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="htt[://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <link href="../css/bootstrap.min.css"
@@ -8,13 +8,14 @@
 <body>
 <div class="container" style="max-width: 600px">
     <div class="py-5 text-center">
-        <h2>상품 목록</h2> </div>
+        <h2>상품 목록</h2></div>
     <div class="row">
         <div class="col">
             <button class="btn btn-primary float-end"
                     onclick="location.href='addForm.html'"
-                    th:onclick="|location.href='@{/basic/items/add}'|"
-                    type="button">상품 등록</button> </div>
+                    th:onclick="|location.href='@{/basic/items/add}'|" type="button">상품 등록
+            </button>
+        </div>
     </div>
     <hr class="my-4">
     <div>
@@ -22,18 +23,19 @@
             <thead>
             <tr>
                 <th>ID</th>
-                <th>상품명</th> <th>가격</th> <th>수량</th>
+                <th>상품명</th>
+                <th>가격</th>
+                <th>수량</th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="item : ${items}">
-<!--                model에 있는 items를 꺼내서 item에 넣어줌! 이제 여기 안에서 item 사용 가능~ -->
-                <td><a href="item.html" th:href="@{/basic/items/{itemId}(itemId=${item.id})}" th:text="${item.id}">회원ID</a></td>
+                <td><a href="item.html" th:href="@{/basic/items/{itemId} (itemId=${item.id})}"
+                       th:text="${item.id}">회원id</a></td>
                 <td><a href="item.html" th:href="@{|/basic/items/${item.id}|}" th:text="${item.itemName}">상품명</a></td>
                 <td th:text="${item.price}">10000</td>
                 <td th:text="${item.quantity}">10</td>
             </tr>
-
             </tbody>
         </table>
     </div>
